<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_kg">Weight(Kg)</string>
    <string name="height_cm">Height(cm)</string>
    <string name="_00">00</string>
    <string name="overweight">Overweight</string>
    <string name="calculate_bmi_again">Calculate BMI Again</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="_001">00</string>
</resources>